Finished basic requirements

--- a/app/auth/src/main/AndroidManifest.xml
+++ b/app/auth/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity
             android:name=".activities.Authentication"
+            android:screenOrientation="portrait"
             android:exported="true" />
     </application>
 
